# emlitec

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.browser.md  README.emscripten.md  README.freestanding.md  README.md  README.npmjs.md  package.json
.github/workflows/: node.js.yml
cmake/: emlitecConfig.cmake.in
emcore/: .gitmodules  CMakeLists.txt  README.md
emcore/cmake/: emcoreConfig.cmake.in
emcore/dlmalloc/: CMakeLists.txt  README.md
emcore/dlmalloc/cmake/: dlmallocConfig.cmake.in
emcore/dlmalloc/src/: dlmalloc.c
emcore/include/emcore/: emcore.h
emcore/src/: lib.c
examples/: CMakeLists.txt  README.md  cbind.c  console.c  dom_test2.c  dom_test2_nostdlib.c
include/emlite/: emlite.h
scripts/: build_tests.js  gen_html_tests.js  index.js
src/: emlite.c
